Initial Cleanup of pom.xml and Documentation pages